add detection http

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -11,7 +11,7 @@ Server:
   recoverWait: 1
 
 MySQL:
-  host: w8t-mysql
+  host: 127.0.0.1
   port: 3306
   user: root
   pass: w8t.123
@@ -19,7 +19,7 @@ MySQL:
   timeout: 10s
 
 Redis:
-  host: w8t-redis
+  host: 127.0.0.1
   port: 6379
   pass: ""
 
